--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "cors": "2.8.5",
     "crypto": "1.0.1",
     "express": "4.17.1",
-    "express-session": "^1.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mime-types": "^2.1.27",
+    "express-session": "1.17.1",
+    "filereader": "0.10.3",
+    "form-data": "3.0.0",
+    "jsonwebtoken": "8.5.1",
+    "mime-types": "2.1.27",
     "mongodb": "3.6.3",
     "mongoose": "5.10.15",
     "multer": "1.4.2",
+    "mysql2": "2.2.5",
+    "node-fetch": "2.6.1",
     "sequelize": "6.3.5"
   }
 }
