--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,8 @@ services:
     container_name: mips
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
-    env_file:
-      - docker.env
+    #env_file:
+    #  - docker.env
     ports:
       - "127.0.0.1::3306"
       - "127.0.0.1::33060"
@@ -33,4 +33,4 @@ services:
     volumes:
       - /opt/fts/mongo:/data/db
     ports:
-      - "127.0.0.1:27017:27017"
+      - "127.0.0.1:27018:27018"
